--- a/README
+++ b/README
@@ -1,9 +1,10 @@
 This repo only version controls the source code.
 
-Limitless is a currently in-progress Third Person ARPG prototype developed by Brandon Lam. Links to assets used are credited at the bottom of the README
+Limitless is a currently in-progress Third Person ARPG prototype developed by Brandon Lam. Links to assets used are credited at the bottom of the README. 
 The goal of this project is primarily for learning to recreate features heavily inspired by FromSoftware, creator of the Dark Souls franchise, which is one of my
-favorite games to date. This repository contains images of the features I've currently implemented and the source code that I've written so far. A full video will 
-be available on YouTube as the prototype nears completion and I decide to move on to another project to continue learning.
+favorite games to date. 
+This repository contains images of the features I've currently implemented and the source code that I've written so far. 
+A full video will be available on YouTube as the prototype nears completion and I decide to move on to another project to continue learning.
 
 Player Controls
 Navigate the world using the WASD keys.
@@ -22,12 +23,9 @@ set to be used by the Echo character via animation retargeting, allowing an anim
 
 Combat:
 Combat mechanics are currently unfinished, but at the moment the player is able to attack enemies with their sword.
-By using a box collider and box trace, we are able to detect when enemies are hit, and by using vector math we are able to
-calculate the direction from which enemies are hit to play the according animation. Enemies currently are able to be hit from
-the front, back, left and right sides.
+By using a box collider and box trace, we are able to detect when enemies are hit, and by using vector math we are able to calculate the direction from which enemies are hit to play the according animation. Enemies currently are able to be hit from the front, back, left and right sides.
 
-Features to be implemented involving combat include enemy AI behavior, and stats including health, stamina and more interesting damage calculations
-including weapon stats and enemy armor values.
+Features to be implemented involving combat include enemy AI behavior, and stats including health, stamina and more interesting damage calculations including weapon stats and enemy armor values.
 
 Destructibles:
 Currently the world has a few different types of destructibles that the player can hit with their weapon, causing them to break.
